--- a/package.json
+++ b/package.json
@@ -4,25 +4,25 @@
     "description": "## Your Task",
     "main": "server.js",
     "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "node server.js"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node server.js"
     },
     "repository": {
-      "type": "git",
-      "url": "git+https://github.com/ashtreid/squeakuel.git"
+        "type": "git",
+        "url": "git+https://github.com/ashtreid/squeakuel.git"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "bugs": {
-      "url": "https://github.com/ashtreid/squeakuel/issues"
+        "url": "https://github.com/ashtreid/squeakuel/issues"
     },
     "homepage": "https://github.com/ashtreid/squeakuel#readme",
     "dependencies": {
-      "dotenv": "^8.2.0",
-      "express": "^4.18.2",
-      "inquirer": "^8.2.4",
-      "mysql2": "^3.3.1"
+        "dotenv": "^8.6.0",
+        "express": "^4.18.2",
+        "inquirer": "^8.2.4",
+        "mysql2": "^3.3.1",
+        "table": "^6.8.1"
     }
-  }
-  
+}
